Removing referrences to 'talk' which is an entity that no longer exists

--- a/css/generic.css
+++ b/css/generic.css
@@ -162,15 +162,13 @@ html>body #sortable li { height: 1.5em; line-height: 1.2em; }
 	color: white;
 }
 
-.view-user .actions-button,
-.view-talk .actions-button {
+.view-user .actions-button {
 	position: absolute;
 	top: 20px;
 	width: 80px;
 	right: 20px;
 }
 
-.users-talk,
-.view-talk {
+.view-users {
 	position: relative;
 }
