[Templating] Adding in some examples of using Twig extensions {{path}} and {{asset}}

--- a/modules/Application/resources/views/index/index.html.twig
+++ b/modules/Application/resources/views/index/index.html.twig
@@ -1,5 +1,12 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-<h4>Action twig content: HELLO WORLD FROM TWIG</h4>
+
+	<h4>Action twig content: HELLO WORLD FROM TWIG</h4>
+
+	{{ asset('css/general.css') }}
+
+	<a href="{{ path('Homepage') }}">Home</a>
+
 {% endblock %}
+
