Adding examples of using twig extensions for {{asset}} and {{path}}.

--- a/modules/Application/resources/views/index/index.html.twig
+++ b/modules/Application/resources/views/index/index.html.twig
@@ -4,9 +4,9 @@
 
 	<h4>Action twig content: HELLO WORLD FROM TWIG</h4>
 
-	{{ asset('css/general.css') }}
+	<p>{{ asset('css/general.css') }}</p>
 
-	<a href="{{ path('Homepage') }}">Home</a>
+	<p><a href="{{ path('Homepage') }}">Home</a></p>
 
 {% endblock %}
 
