--- a/public/css/main.css
+++ b/public/css/main.css
@@ -41,8 +41,15 @@ header {
 
 .box-header h2 {
 	font-size: 15px;
+	padding-top: 0;
+	margin-top: 0;
+	margin-bottom: 0;
 	width: auto;
 	clear: none;
 	float: left;
 	line-height: 25px;
+}
+
+#homepage .page-header small {
+	font-size: 0.5em;
 }
