--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,9 +1,30 @@
 html, body {
-    font-family: 'Open Sans', sans-serif;
+
     background:#161616;
-    color:#fff;
-    text-align:center;
+
 }
-h2 {
+
+
+#landing-index {
+    text-align:center;
+    font-family: 'Open Sans', sans-serif;
+    color:#fff;
+    padding: 0 5% 5% 5%;
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+#landing-index img {
+    margin-top: 10%;
+}
+
+#landing-index h2 {
+    margin-top: 5%;
     font-weight:300;
+    font-size: 2.0em;
+}
+#landing-index p {
+    /*border: 1px solid red;*/
+    font-size: 1.3em;
 }
