--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,86 +1,82 @@
 html, body {
+    min-height:100%;
+    height:100%;
+    position:relative;
     background:#161616;
-    width: 100%;
-    height: 100%;
 }
-
-.clearfix:after {
-    visibility: hidden;
-    display: block;
-    font-size: 0;
-    content: " ";
-    clear: both;
-    height: 0;
+h2 {
+    margin:0;
 }
-.clearfix { display: inline-block; }
-/* start commented backslash hack \*/
-* html .clearfix { height: 1%; }
-.clearfix { display: block; }
-/* close commented backslash hack */
-
-#landing-index {
+h3 {
+    margin:0 0 10px 0;
+}
+#container {
+    height:100%;
+}
+#landing, #landing-two {
+    height:100%;
+    position:relative;
+    background:#284545;
+    border-top:1px solid;
     text-align:center;
-    font-family: 'Open Sans', sans-serif;
+    padding:50px;
+}
+#landing-two {
+    background:#202020;
+    text-align:left;
+    padding:50px;
     color:#fff;
-    padding: 0 10% 5% 10%;
-    width: 80%;
-    margin: 2% auto 5% auto;
-    display: block;
-    border: 1px solid #fff;
-    height: 100%;
+    border:none;
+}
+#landing img, #landing-two img {
+    width:120px;
+    margin-bottom:50px;
+}
+#landing .landing-wrapper {
+    position:relative;
+    top:50%;
+    margin-top:-100px;
+    height:215px;
+}
+#landing .landing-wrapper .buttons a {
+    width:200px;
+    background:#406c6c;
+    border-radius:4px;
+    padding:15px;
+    display:inline-block;
+    color:#fff;
+    text-decoration:none;
+    border:1px solid #303030;
+    outline:none;
+}
+#landing .landing-wrapper .buttons a:first-child {
+    margin-right:5px;
 }
 
-#landing-index img {
-    margin-top: 5%;
+.list-container {
+    width:100%;
+    margin-top:50px;
 }
-
-#landing-index h2 {
-    margin-top: 5%;
-    font-weight:300;
-    font-size: 2.0em;
+.landing-list {
+    width:30%;
+    height:200px;
+    padding:1% 1.5%;
+    float:left;
+    margin-left:5%;
+    background:rgba(255, 255, 255, 0.05);
+    border-radius:4px;
 }
-#landing-index p {
-    /*border: 1px solid red;*/
-    font-size: 1.3em;
+.landing-list:first-child {
+    margin-left:0;
 }
-
-#landing-index .landing-list {
-    float: left;
-    width: 33%;
-    display: block;
+.landing-list ul {
+    list-style:none;
+    padding:0;
+    margin:0;
 }
-
-#landing-index .landing-list .list-title {
-    text-align: left;
-    font-size: 1.8em;
+.landing-list:first-child ul {
+    border:none;
 }
-
-#landing-index .landing-list ul {
-    list-style-type: none;
-    padding: 0;
-    /*padding: 0 0 0 12px;*/
-    margin: 0;
-
-
-    /*list-style-image: url(/modules/framework/images/bullet-grey.png);*/
-
-}
-
-#landing-index .landing-list li {
-    padding-left: 0;
-    text-align: left;
-    margin-bottom: 5px;
-    background-image: url(/modules/framework/images/bullet-grey.png);
-    background-repeat: no-repeat;
-}
-
-#landing-index .landing-list li a {
-    font-size: 1.5em;
-    color: #c1c1c1;
-    display: block;
-    padding-left: 1.8em;
-}
-
-#landing-index .list-container {
-    margin-top: 5%;
+.landing-list a {
+    color:#406c6c;
 }
