--- a/app/views/base.html.twig
+++ b/app/views/base.html.twig
@@ -2,14 +2,24 @@
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-        <title>{% block title %}Test Application{% endblock %}</title>
+        <title>{% block title %}PPI Skeleton Application{% endblock %}</title>
+        <meta charset="utf-8">
+        <meta name="description" content="PPI Skeleton Project">
+        <meta name="viewport" content="width=device-width">
+
+        <!-- CSS Stuff -->
+        <link href="{{ asset('components/bootstrap/dist/css/bootstrap.min.css') }}" rel="stylesheet" />
+        <link href="{{ asset('components/fontawesome/css/font-awesome.css') }}" rel="stylesheet" />
+        <link href="{{ asset('css/main.css') }}" rel="stylesheet" />
+        {% block include_css %}{% endblock %}
     </head>
     <body>
-
-		<h1>My Twig Page</h1>
-
-        <div id="content">
+        <div id="container">
             {% block body %}{% endblock %}
         </div>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="{{ asset('components/jquery/dist/jquery.min.js') }}"><\/script>')</script>
+        <script src="{{ asset('components/jquery-ui/jquery-ui.js') }}"></script>
+        <script src="{{ asset('components/bootstrap/dist/js/bootstrap.min.js') }}"></script>
     </body>
 </html>
