Adding fastrouter support to skeleton module

--- a/utils/skeleton_module/resources/views/index/index.html.twig
+++ b/utils/skeleton_module/resources/views/index/index.html.twig
@@ -1,5 +1,5 @@
 {% extends "[MODULE_NAME]:index:base.html.twig" %}
 
 {% block body %}
-    <div>Welcome to your new module: [MODULE_NAME]Twig</div>
+    <div>Welcome to your new module: [MODULE_NAME]</div>
 {% endblock %}
